--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
 * {
   font-family: Geologica;
-  transition: all 0.25s ease;
+  transition: all 0.5s ease;
 }
 
 /*
@@ -59,6 +59,14 @@ Font Configurations...
   font-size: 4rem;
 }
 
+
+.hidescroll{
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+.hidescroll::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
 
 html {
   width:100vw;
