several structural changes to quicker page navigation

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -244,6 +244,21 @@ span{
   }
 }
 
+.fade-in-large{
+  animation: fadeInLarge 1s ease;
+}
+
+@keyframes fadeInLarge {
+  0%{
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 .fade-out{
   animation: fadeOut 1s ease;
   opacity: 0;
@@ -257,5 +272,21 @@ span{
   100%{
     opacity: 0;
     transform: translateY(10px);
+  }
+}
+
+.fade-out-large{
+  animation: fadeOutLarge 1s ease;
+  opacity: 0;
+}
+
+@keyframes fadeOutLarge {
+  0%{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+  100%{
+    opacity: 0;
+    transform: translateY(30px);
   }
 }
