--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -77,6 +77,19 @@ body {
   transition: background 0s ease;
 }
 
+.twolineclamp{
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.fourlineclamp{
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+
+
 html {
   width:100vw;
   height:100vh;
