--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -246,6 +246,9 @@ span{
 .shadow-less{
   box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.75);
 }
+.shadow-least{
+  box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
+}
 .text-shadow{
   text-shadow: 0px 0px 10px rgba(0,0,0,0.75);
 }
